--- a/01-easyTask/src/app/app.component.html
+++ b/01-easyTask/src/app/app.component.html
@@ -4,12 +4,12 @@
     <ul id="users">
         @for (user of users; track user.id) {
         <li>
-            <app-user (select)="onSelect($event)" [user]="user" />
+            <app-user (select)="onSelect($event)" [selected]="userId===user.id" [user]="user" />
         </li>
         }
     </ul>
-    @if(userName){
-    <app-tasks [taskName]="userName.name" />
+    @if(selectedUser){
+    <app-tasks [userId]="selectedUser.id" [taskName]="selectedUser.name" />
     } @else {
     <p id="fallback">Select a user to see their tasks!</p>
     }
