--- a/03-miniDashboard-cmpDeepDive/src/app/app.component.html
+++ b/03-miniDashboard-cmpDeepDive/src/app/app.component.html
@@ -2,16 +2,16 @@
 
 <main>
   <div id="dashboard">
-    <div class="dashboard-item">
+    <app-dashboard-item [image]="{ src : 'status.png', alt :'Server Status' }" title="Server Status">
       <app-server-status />
-    </div>
+    </app-dashboard-item>
 
-    <div class="dashboard-item">
+    <app-dashboard-item [image]="{ src : 'globe.png', alt :'A globe' }" title="Server Status">
       <app-traffic />
-    </div>
+    </app-dashboard-item>
 
-    <div class="dashboard-item">
-      <app-traffic />
-    </div>
+    <app-dashboard-item [image]="{ src : 'list.png', alt :'A list of items' }" title="Server Status">
+      <app-tickets />
+    </app-dashboard-item>
   </div>
 </main>
