--- a/03-miniDashboard-cmpDeepDive/src/app/app.component.html
+++ b/03-miniDashboard-cmpDeepDive/src/app/app.component.html
@@ -6,11 +6,11 @@
       <app-server-status />
     </app-dashboard-item>
 
-    <app-dashboard-item [image]="{ src : 'globe.png', alt :'A globe' }" title="Server Status">
+    <app-dashboard-item [image]="{ src : 'globe.png', alt :'A globe' }" title="Traffic">
       <app-traffic />
     </app-dashboard-item>
 
-    <app-dashboard-item [image]="{ src : 'list.png', alt :'A list of items' }" title="Server Status">
+    <app-dashboard-item [image]="{ src : 'list.png', alt :'A list of items' }" title="Support Tickets">
       <app-tickets />
     </app-dashboard-item>
   </div>
