--- a/04-deepDiveDirectives/src/app/learning-resources/learning-resources.component.html
+++ b/04-deepDiveDirectives/src/app/learning-resources/learning-resources.component.html
@@ -6,7 +6,7 @@
     <a href="https://angular.dev" appSafeLink="myapp-docs-link">Angular Documentation</a>
   </li>
   <li>
-    <a href="https://academind.com/courses" appSafeLink queryParam="my-app-form">Academind Courses</a>
+    <a href="https://academind.com/courses" appSafeLink="my-app-form">Academind Courses</a>
   </li>
   <li>
     <a href="https://www.google.com/search?q=angular">Google</a>
